3ano/1semestre/PLC/TP9/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Sexp
Rule 1     Sexp -> Exp .
Rule 2     Exp -> INT
Rule 3     Exp -> ( Funcao )
Rule 4     Funcao -> + Lista
Rule 5     Funcao -> * Lista
Rule 6     Lista -> Lista Exp
Rule 7     Lista -> <empty>

Terminals, with rules where they appear

(                    : 3
)                    : 3
*                    : 5
+                    : 4
.                    : 1
INT                  : 2
error                : 

Nonterminals, with rules where they appear

Exp                  : 1 6
Funcao               : 3
Lista                : 4 5 6
Sexp                 : 0

Parsing method: LALR

state 0

    (0) S' -> . Sexp
    (1) Sexp -> . Exp .
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    INT             shift and go to state 3
    (               shift and go to state 4

    Sexp                           shift and go to state 1
    Exp                            shift and go to state 2

state 1

    (0) S' -> Sexp .



state 2

    (1) Sexp -> Exp . .

    .               shift and go to state 5


state 3

    (2) Exp -> INT .

    .               reduce using rule 2 (Exp -> INT .)
    INT             reduce using rule 2 (Exp -> INT .)
    (               reduce using rule 2 (Exp -> INT .)
    )               reduce using rule 2 (Exp -> INT .)


state 4

    (3) Exp -> ( . Funcao )
    (4) Funcao -> . + Lista
    (5) Funcao -> . * Lista

    +               shift and go to state 7
    *               shift and go to state 8

    Funcao                         shift and go to state 6

state 5

    (1) Sexp -> Exp . .

    $end            reduce using rule 1 (Sexp -> Exp . .)


state 6

    (3) Exp -> ( Funcao . )

    )               shift and go to state 9


state 7

    (4) Funcao -> + . Lista
    (6) Lista -> . Lista Exp
    (7) Lista -> .

    INT             reduce using rule 7 (Lista -> .)
    (               reduce using rule 7 (Lista -> .)
    )               reduce using rule 7 (Lista -> .)

    Lista                          shift and go to state 10

state 8

    (5) Funcao -> * . Lista
    (6) Lista -> . Lista Exp
    (7) Lista -> .

    INT             reduce using rule 7 (Lista -> .)
    (               reduce using rule 7 (Lista -> .)
    )               reduce using rule 7 (Lista -> .)

    Lista                          shift and go to state 11

state 9

    (3) Exp -> ( Funcao ) .

    .               reduce using rule 3 (Exp -> ( Funcao ) .)
    INT             reduce using rule 3 (Exp -> ( Funcao ) .)
    (               reduce using rule 3 (Exp -> ( Funcao ) .)
    )               reduce using rule 3 (Exp -> ( Funcao ) .)


state 10

    (4) Funcao -> + Lista .
    (6) Lista -> Lista . Exp
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    )               reduce using rule 4 (Funcao -> + Lista .)
    INT             shift and go to state 3
    (               shift and go to state 4

    Exp                            shift and go to state 12

state 11

    (5) Funcao -> * Lista .
    (6) Lista -> Lista . Exp
    (2) Exp -> . INT
    (3) Exp -> . ( Funcao )

    )               reduce using rule 5 (Funcao -> * Lista .)
    INT             shift and go to state 3
    (               shift and go to state 4

    Exp                            shift and go to state 12

state 12

    (6) Lista -> Lista Exp .

    INT             reduce using rule 6 (Lista -> Lista Exp .)
    (               reduce using rule 6 (Lista -> Lista Exp .)
    )               reduce using rule 6 (Lista -> Lista Exp .)

